tests/comp/sem/invalid/double_param.mj
class Bad {
    public int badMethod(int x/***, int x***/) {}
    public static void main(String[] args) {}
}
